--- a/more.html
+++ b/more.html
@@ -7,6 +7,19 @@
   </head>
   <body>
     <h1>please contact me to more</h1>
+
+
+  <div class="middle">
+    <h1>COMING SOON</h1>
+    <hr>
+    <p>120 days left</p>
+  </div>
+  <div class="bottomleft">
+
+  </div>
+</div>
+
+
     <button class="glow-on-hover" type="button" onclick="window.location='index.html';">Exit</button>
     <style>
 
